@@ -1,4 +1,5 @@
-07112013 -> jonnyboy -> fixed bug in postback, when reconnecting to nntp, need to set group name first
+07112013 -> jonnyboy -> fixed bug in tmux-seq when not running any backfill
+						fixed bug in postback, when reconnecting to nntp, need to set group name first
 07112013 -> kevin    -> added the new regexes to namecleaning releaseCleaner, removed the "universal" one from the groups.
 						changed the group regexes in releaseCleaner to make sure they don't match on other groups.
 						make sure exe doesn't get into tv.
